add mappers & update all handlers
