# src/blogs/routers/mappers/map-to-blog-view-model.ts
@@ -1,0 +1,14 @@
+import { BlogViewModel } from "../../../core/types/blog-view-model-type";
+import { WithId } from "mongodb";
+import { BlogMongoModel } from "../../dto/blog-mongo-model";
+
+export function mapToBlogViewModel(blog: WithId<BlogMongoModel>): BlogViewModel {
+  return {
+    id: blog._id.toString(),
+    name: blog.name,
+    description: blog.description,
+    websiteUrl: blog.websiteUrl,
+    createdAt: blog.createdAt,
+    isMembership: blog.isMembership
+  }
+}
