# src/posts/routers/mappers/map-to-post-mongo-model.ts
@@ -1,0 +1,13 @@
+import { PostMongoModel } from "../../dto/post-mongo-model";
+import { PostInputModel } from "../../dto/post-input-dto";
+
+export function mapToPostMongoModel(post: PostInputModel): PostMongoModel{
+  return {
+    title: post.title,
+    shortDescription: post.shortDescription,
+    content: post.content,
+    blogId: post.blogId,
+    blogName: "",
+    createdAt: new Date().toISOString(),
+  }
+}
